--- a/app/globals.css
+++ b/app/globals.css
@@ -54,7 +54,7 @@
   }
 
   .wrapper {
-    @apply px-5 py-12 xs:p-10 max-w-7xl mx-auto flex flex-col relative z-10;
+    @apply px-4 py-8 xs:px-6 xs:py-10 max-w-7xl mx-auto flex flex-col relative z-10;
   }
 
   .trending {
@@ -94,50 +94,54 @@
   }
 
   .all-movies {
-    @apply space-y-9;
+    @apply space-y-6;
 
     & ul {
-      @apply grid grid-cols-1 gap-5 xs:grid-cols-2 md:grid-cols-3 lg:grid-cols-4;
+      @apply grid grid-cols-3 gap-3 sm:gap-4 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 2xl:grid-cols-7;
     }
   }
 
+  .hero_image{
+    @aplly h-50 w-30 rounded
+  }
+
   .movie-card {
-    @apply bg-dark-100 p-5 rounded-2xl shadow-inner shadow-light-100/10;
+    @apply bg-dark-100 mb-6 xl:m-8 p-2 sm:p-3 md:p-4 md:h-150 md:w-90 md:m-4 xl:p-5 2xl:p-6 xl:w-120 xl:h-190 xl:grid rounded-xl shadow-inner shadow-light-100/10 transition-all duration-200 hover:shadow-light-100/20;
 
     & img {
-      @apply rounded-lg h-auto w-full;
+      @apply rounded-lg h-auto w-full xl:w-120 xl:h-150 aspect-[2/3] object-cover;
     }
 
     & h3 {
-      @apply text-white font-bold text-base line-clamp-1;
+      @apply text-white font-bold text-xs sm:text-sm md:text-base line-clamp-2 min-h-[2rem] sm:min-h-[2.5rem] leading-tight;
     }
 
     & .content {
-      @apply mt-2 flex flex-row items-center flex-wrap gap-2;
+      @apply mt-1.5 sm:mt-2 flex flex-row items-center flex-wrap gap-1;
     }
 
     & .rating {
-      @apply flex flex-row items-center gap-1;
+      @apply flex flex-row items-center gap-0.5 sm:gap-1;
     }
 
     & .rating img {
-      @apply size-4 object-contain;
+      @apply size-3 sm:size-4 object-contain;
     }
 
     & .rating p {
-      @apply font-bold text-base text-white;
+      @apply font-bold text-xs sm:text-sm text-white;
     }
 
     & .content span {
-      @apply text-sm text-gray-100;
+      @apply text-xs sm:text-sm text-gray-100;
     }
 
     & .content .lang {
-      @apply capitalize text-gray-100 font-medium text-base;
+      @apply capitalize text-gray-100 font-medium text-xs sm:text-sm;
     }
 
     & .content .year {
-      @apply text-gray-100 font-medium text-base;
+      @apply text-gray-100 font-medium text-xs sm:text-sm;
     }
   }
 }
